[package]

name = "rslock"
version = "0.6.0"
authors = [
  "Jan-Erik Rediger <badboy@archlinux.us>",
  "Romain Boces <bocesr@gmail.com>",
  "hexcowboy <hex@cowboy.dev",
]

keywords = ["distributed", "locking", "dls", "redis", "redlock"]
description = "Implementation of the distributed locking mechanism built on top of Async Redis"

homepage = "https://github.com/hexcowboy/redlock-async-rs"
repository = "https://github.com/hexcowboy/redlock-async-rs"

license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

[features]
async-std-comp = ["redis/async-std-comp"]
tokio-comp = ["redis/tokio-comp"]
tls-native-tls = ["redis/tls-native-tls"]
tokio-native-tls-comp = ["redis/tokio-native-tls-comp"]
default = []

[dependencies]
redis = { version = "0.29.1", features = ["tls-native-tls", "tokio-native-tls-comp", "tokio-comp"] }
tokio = { version = "1.41.1", features = ["rt", "time"] }
rand = "0.8.5"
futures = "0.3.31"
thiserror = "2.0.3"

[dev-dependencies]
once_cell = "^1.20.2"
testcontainers = "^0.23.1"
anyhow = "^1.0.93"
tokio = { version = "^1.41.1", features = ["macros", "rt-multi-thread"] }
tokio-test = "^0.4.4"
